--- a/content/5_validierung/validierung.tex
+++ b/content/5_validierung/validierung.tex
@@ -16,3 +16,6 @@
 \section{Ergebnisse}
 \section{Soll/Ist-Vergleich}\todo{Bezug auf den Zeitplan, Abweichungen erklären}
 \section{Erkenntnisse, Verbesserungen}\todo{eingehen auf Literatur (Gyro, Magnetometer)}
+	\begin{itemize}
+		\item \gls{g:labview} nicht unter Windows 8.x verwenden. Die gesamte Toolchain verhält sich sehr instabil, ins besonders die USB-Treiber für das \gls{g:myrio}. 
+	\end{itemize}
