add missing values

--- a/content/3_konzept/table/auswertung_rot.tex
+++ b/content/3_konzept/table/auswertung_rot.tex
@@ -7,15 +7,15 @@
 		\rowcolor{bfhblue}
 		\textcolor{white}{Messung} & \textcolor{white}{Absoluter Fehler} & \textcolor{white}{Relativer Fehler} & \textcolor{white}{Mittelwert}  & \textcolor{white}{Standardabweichung}\\
 		\hline
-		Rotation \unit[62]{°} & \unit[-2.88]{°} & \unit[-0.038]{\%} & \unit[XXX]{°} & \unit[XXX]{°}\\
+		Rotation \unit[62]{°} & \unit[-2.28]{°} & \unit[-0.038]{\%} & \unit[59.72]{°} & \unit[0.009]{°}\\
 		\hline
-		Rotation \unit[77]{°} & \unit[-1.65]{°} & \unit[-0.021]{\%} & \unit[XXX]{°} & \unit[XXX]{°} \\
+		Rotation \unit[77]{°} & \unit[-1.65]{°} & \unit[-0.021]{\%} & \unit[75.35]{°} & \unit[0.005]{°} \\
 		\hline
-		Rotation \unit[90]{°} & \unit[-1.45]{°} & \unit[-0.016]{\%} & \unit[XXX]{°} & \unit[XXX]{°}\\
+		Rotation \unit[90]{°} & \unit[-1.45]{°} & \unit[-0.016]{\%} & \unit[88.55]{°} & \unit[0.009]{°}\\
 		\hline
-		Rotation \unit[105]{°} & \unit[-0.22]{°} & \unit[-0.002]{\%} & \unit[XXX]{°} & \unit[XXX]{°} \\
+		Rotation \unit[105]{°} & \unit[-0.22]{°} & \unit[-0.002]{\%} & \unit[104.78]{°} & \unit[0.003]{°} \\
 		\hline
-		Rotation \unit[118]{°} & \unit[0.74]{°} & \unit[0.006]{\%} & \unit[XXX]{°} & \unit[XXX]{°} \\
+		Rotation \unit[118]{°} & \unit[0.74]{°} & \unit[0.006]{\%} & \unit[118.74]{°} & \unit[0.152]{°} \\
 		\hline
      \end{tabularx}  
 \end{table}
