one expert removed from titlepage

--- a/titlepage/titlepage.tex
+++ b/titlepage/titlepage.tex
@@ -50,8 +50,7 @@
                                & \textsf\AutorB\vspace{5pt}\\
                 \textsf{Betreuer} & \textsf\DozentA\\
                                 & \textsf\DozentB\vspace{5pt}\\
-                \textsf{Experten} & \textsf\ExpertA\\
-                                  & \textsf\ExpertB\vspace{5pt}\\
+                \textsf{Experte} & \textsf\ExpertA\vspace{5pt}\\
                 \textsf{Ort, Datum} & \textsf{\Ort, \Datum}\vspace{5pt}\\
                 &\\
                 &\\
